<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.dbcorp.textorapido.atividades.MainActivity"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:background="@color/black">
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:padding="8dp"
    	android:paddingTop="5dp"
    	android:paddingBottom="5dp"
    	android:orientation="horizontal"
    	android:background="@drawable/top_back">
    	
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/procurar"
            style="@style/AppTheme.TextAppearance.label"/>
        
        <EditText
	        android:id="@+id/textoProcura"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="text"
            android:textColorHint="@color/hint"
            android:textColor="@color/text_default"
	        android:hint="@string/hint"
	        android:textSize="16sp"
	        android:layout_weight="1"/>
        
        <ImageView
            android:id="@+id/btProcurar"
	        android:layout_width="55dp"
	        android:layout_height="55dp"
	        android:src="@drawable/lupa"
	        android:contentDescription="@string/btProcura"
	        android:onClick="procurar"/>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:padding="2dp"
    	android:orientation="horizontal"
    	android:background="@drawable/midle_back">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:text="@string/textos"
            style="@style/AppTheme.TextAppearance.label"/>
        
        <ImageView
            android:id="@+id/btAdiciona"
	        android:layout_width="40dp"
	        android:layout_height="40dp"
	        android:src="@drawable/plus"
	        android:layout_alignParentRight="true"
	        android:onClick="adiciona"
	        android:contentDescription="@string/btProcura"/>
    </RelativeLayout>
    
    <ListView
         android:id="@+id/list"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:background="@drawable/botton_back"
         android:paddingBottom="2dp">
    </ListView>
</LinearLayout>

